Fixed iamges not working on mobile

--- a/src/styleFiles/Dissertation.css
+++ b/src/styleFiles/Dissertation.css
@@ -129,7 +129,7 @@
     }
   
     .dissTooSmall {
-      display: block;
+      display: none; /* change back to block */
       padding: 20px;
     }
   }
